✨ Added response toast to post box screen